--- a/styles/style.scss
+++ b/styles/style.scss
@@ -65,7 +65,7 @@ header{
             text-align:center;
       }
       h3{
-            font-size:12px;
+            font-size:14px;
             text-align:center;
             color:yellow;
             
@@ -400,6 +400,11 @@ footer{
             line-height:18px;
 
       }
+}
+
+.twitterBtn {
+      text-align: center;
+      padding-bottom: 30px;
 }
 
 @media(max-width:1293px){
